--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,38 +1,26 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-columns: auto auto;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  padding: 4rem 1rem 0 1rem;
+  gap: 4rem;
 
-.App-link {
-  color: #61dafb;
-}
+  font-size: 14px;
+  line-height: 28px;
+  font-family: 'Segoe UI';
+  color: rgba(5, 5, 5, 0.88);
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .title {
+    grid-column: span 2;
+    max-width: 500px;
   }
-  to {
-    transform: rotate(360deg);
+
+  code {
+    margin: 0 1px;
+    padding: 0.2em 0.4em;
+    font-size: 0.9em;
+    background: rgba(0, 0, 0, 0.04);
+    border: 1px solid rgba(5, 5, 5, 0.06);
+    border-radius: 3px;
   }
 }
