--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -7,7 +7,7 @@
 
   font-size: 14px;
   line-height: 28px;
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   color: rgba(5, 5, 5, 0.88);
 
   .title {
