--- a/src/_codux/boards/playground.board.module.scss
+++ b/src/_codux/boards/playground.board.module.scss
@@ -9,7 +9,7 @@
   gap: 4rem;
   font-size: 14px;
   line-height: 28px;
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   color: rgba(5, 5, 5, 0.88);
 
   .title {
