--- a/src/components/radix-menu/popover.css
+++ b/src/components/radix-menu/popover.css
@@ -1,6 +1,6 @@
-@use "@radix-ui/colors/blackA.css";
-@use "@radix-ui/colors/mauve.css";
-@use "@radix-ui/colors/violet.css";
+@import "@radix-ui/colors/blackA.css";
+@import "@radix-ui/colors/mauve.css";
+@import "@radix-ui/colors/violet.css";
 
 /* reset */
 button,
