--- a/src/_codux/boards/table/style.css
+++ b/src/_codux/boards/table/style.css
@@ -1,3 +1,3 @@
 body {
-  background-image: linear-gradient(330deg, rebeccapurple 0%, hsl(226, 68%, 56%) 100%);
+  background-image: linear-gradient(330deg, hsl(0, 53%, 50%) 0%, hsl(236, 68%, 56%) 100%);
 }
