--- a/src/components/best-component/best-component.module.scss
+++ b/src/components/best-component/best-component.module.scss
@@ -1,4 +1,8 @@
-.bla {
+.inner {
+    background-image: linear-gradient(100deg, hsl(20, 70%, 52%) 0%, hsl(272, 57%, 43%) 100%);  
+}
+
+.outer {
     background-image: linear-gradient(300deg, hsl(220, 70%, 52%) 0%, hsl(172, 57%, 43%) 100%);
     padding: 1em;
     border-radius: 0.5em;
