--- a/src/components/shadcd/accordion.css
+++ b/src/components/shadcd/accordion.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-image: linear-gradient(330deg, hsl(120, 53%, 50%) 0%, hsl(184, 68%, 56%) 100%);
+}
